kubernetes/app-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mp.service: adminshell
  name: adminshell
  namespace: musicplayer
spec:
  ports:
  - name: "7681"
    port: 7681
    targetPort: 7681
  selector:
    mp.service: adminshell
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mp.service: adminshell
  name: adminshell
  namespace: musicplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      mp.service: adminshell
  strategy: {}
  template:
    metadata:
      labels:
        mp.network/mpdadmin: "true"
        mp.network/webfrontnet: "true"
        mp.service: adminshell
    spec:
      containers:
      - image: crgm/mpcontainer-shell:latest
        imagePullPolicy: "Always"
        name: adminshell
        ports:
        - containerPort: 7681
          protocol: TCP
        resources: {}
        readinessProbe:
          exec:
            command:
            - pgrep
            - ttyd
          initialDelaySeconds: 10
          periodSeconds: 30
        livenessProbe:
          exec:
            command:
            - pgrep
            - ttyd
          initialDelaySeconds: 5
          periodSeconds: 10
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
