kubernetes/app-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mp.service: frontend
  name: frontend
  namespace: musicplayer
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    mp.service: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mp.service: frontend
  name: frontend
  namespace: musicplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      mp.service: frontend
  strategy: {}
  template:
    metadata:
      labels:
        mp.network/webfrontnet: "true"
        mp.service: frontend
    spec:
      containers:
      - image: crgm/mpcontainer-frontend:latest
        imagePullPolicy: "Always"
        name: frontend
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /usr/local/bin/checkhap.sh
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping/stat
            port: 3000
          timeoutSeconds: 5
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ping/stat
            port: 3000
          timeoutSeconds: 5
      restartPolicy: Always
      serviceAccountName: ""
