kubernetes/app-mpd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mp.service: backendmpd
  name: backendmpd
  namespace: musicplayer
spec:
  ports:
  - name: "6600"
    port: 6600
    targetPort: 6600
  - name: "3123"
    port: 3123
    targetPort: 3123
  selector:
    mp.service: backendmpd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mp.service: backendmpd
  name: backendmpd
  namespace: musicplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      mp.service: backendmpd
  strategy: {}
  template:
    metadata:
      labels:
        mp.network/mpdadmin: "true"
        mp.network/webfrontmpd: "true"
        mp.service: backendmpd
    spec:
      containers:
      - image: crgm/mpcontainer-mpd:latest
        imagePullPolicy: "Always"
        name: backendmpd
        ports:
        - containerPort: 6600
          protocol: TCP
        - containerPort: 3123
          protocol: TCP
        resources: {}
        startupProbe:
          exec:
            command:
            - /usr/bin/mpc
            - -h
            - DJp455w0rd101@backendmpd
            - outputs
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - /usr/bin/mpc
            - -h
            - DJp455w0rd101@backendmpd
            - outputs
          timeoutSeconds: 30
        tty: true
        volumeMounts:
        - name: music
          mountPath: /var/lib/mpd/music
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: music
        persistentVolumeClaim:
          claimName: music-claim
