kubernetes/app-pyapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mp.service: mpcpyapp
  name: mpcpyapp
  namespace: musicplayer
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    mp.service: mpcpyapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mp.service: mpcpyapp
  name: mpcpyapp
  namespace: musicplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      mp.service: mpcpyapp
  strategy: {}
  template:
    metadata:
      labels:
        mp.network/webfrontnet: "true"
        mp.service: mpcpyapp
    spec:
      containers:
      - image: crgm/mpcontainer-pyapp:latest
        imagePullPolicy: "Always"
        name: mpcpyapp
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
#        livenessProbe:
#          httpGet:
#            path: /host/ping/stat
#            port: 8888
#          timeoutSeconds: 5
#          initialDelaySeconds: 5
#          periodSeconds: 10
#        startupProbe:
#          httpGet:
#            path: /host/ping/stat
#            port: 8888
#          failureThreshold: 30
#          periodSeconds: 10
#        readinessProbe:
#          httpGet:
#            path: /host/ping/stat
#            port: 8888
#          timeoutSeconds: 3
      restartPolicy: Always
      serviceAccountName: ""
